# lit-client

./: README.md  key.jks
java/app/src/main/jni/: CCheckFileHash.cpp  CDebugInfo.cpp  CDebugInfo.h  CFileHashed.cpp  CLocalisation.cpp  CLocalisation.h  CMakeLists.txt  CServerManager.cpp  CSettings.cpp  CSettings.h  chatwindow.cpp  chatwindow.h  dialog.cpp  keyboard.cpp  keyboard.h  main.cpp  main.h  newkeyboard.cpp  scoreboard.cpp  scrollbar.cpp
java/app/src/main/jni/game/: CCustomPlateManager.cpp  CCustomPlateManager.h  CGtaWidgets.cpp  CGtaWidgets.h  CRenderTarget.cpp  CSnow.cpp  CSnow.h  CVector.cpp  CVector.h  CWeaponsOutFit.cpp  Coronas.cpp  Coronas.h  RegisteredCorona.cpp  RegisteredCorona.h  common.h  crashfixes.cpp  game.cpp  game.h  hooks.cpp  object.cpp  object.h  pad.cpp  patches.cpp  playerped.cpp  playerped.h  quaternion.cpp  snapshothelper.cpp  snapshothelper.h  splashscreen.cpp  textdraw.cpp  util.h  util1.cpp  vehicle.cpp  vehicle.h
java/app/src/main/jni/game/Core/: Pool.h
java/app/src/main/jni/game/Pipelines/: RxPipeline.cpp  RxPipeline.h
java/app/src/main/jni/game/Pipelines/CustomBuilding/: CustomBuildingDNPipeline.cpp  CustomBuildingRenderer.cpp  CustomBuildingRenderer.h
java/app/src/main/jni/game/Pipelines/CustomCar/: CustomCarEnvMapPipeline.cpp  CustomCarEnvMapPipeline.h
java/app/src/main/jni/game/RW/: RenderWare.cpp  rpworld.h  rwplcore.h
java/app/src/main/jni/gtasa/: CMD.cpp  CMD.h  ConfigReader.cpp  ConfigReader.h  GLES.cpp  GLES.h  HUD.cpp  HUD.h  ImageLoader.cpp  ImageLoader.h  JSONParser.cpp  JSONParser.h  Optimization.cpp  Optimization.h  Skybox.cpp  Skybox.h  TextureLoader.cpp  TextureLoader.h
java/app/src/main/jni/gui/: CFontInstance.h  gui.cpp  gui.h
java/app/src/main/jni/net/: localplayer.cpp  localplayer.h  netgame.cpp  netgame.h  netrpc.cpp  playerpool.cpp  playerpool.h  remoteplayer.cpp  scriptrpc.cpp  textlabelpool.cpp  textlabelpool.h  vehiclepool.cpp  vehiclepool.h
java/app/src/main/jni/obfuscate/: obfuscator.hpp  str_obfuscate.hpp
java/app/src/main/jni/util/: CJavaWrapper.cpp  CJavaWrapper.h  CStackTrace.h  armhook.cpp  armhook.h  patch.h  util.cpp
java/app/src/main/jni/voice/: CRingBuffer.h
(+83 files in other folders)
